--- a/basePresentar_AAA/src/basepresentar_aaa/Servidor.form
+++ b/basePresentar_AAA/src/basepresentar_aaa/Servidor.form
@@ -86,6 +86,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAceptarActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnAceptarKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnCancelar">
