--- a/basePresentar_AAA/src/basepresentar_aaa/TransaCola.form
+++ b/basePresentar_AAA/src/basepresentar_aaa/TransaCola.form
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="basepresentar_aaa.Instantanea1" name="instantanea11">
+      <Properties>
+        <Property name="visible" type="boolean" value="true"/>
+      </Properties>
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -70,7 +77,7 @@
                       <Component id="jScrollPane1" min="-2" pref="115" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="31" max="32767" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
